--- a/submit.html
+++ b/submit.html
@@ -9,7 +9,7 @@
 
 <p>Beskjeden du har sendt er mottat.</p>
 
-<a href="kontakt meg.html">
+<a href="kontaktMeg.html">
     <button type="submit" form="nameform" value="Submit">Gå tilbake</button>
     </a>
 <br>
