--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="file:///C:/Users/ebmos/OneDrive%20-%20Viken%20fylkeskommune/Skrivebord/nettside/index.html">Hjem</a>
-  <a href="file:///C:\Users\ebmos\OneDrive - Viken fylkeskommune\Skrivebord\nettside\prosjekt.html">Prosjekter</a>
-  <a href="file:///C:\Users\ebmos\OneDrive - Viken fylkeskommune\Skrivebord\nettside\om meg.html">Om meg</a>
-  <a href="file:///C:/Users/ebmos/OneDrive%20-%20Viken%20fylkeskommune/Skrivebord/nettside/kontakt%20meg.html">Kontakt meg</a>
+  <a href="index.html">Hjem</a>
+  <a href="prosjekt.html">Prosjekter</a>
+  <a href="omMeg.html">Om meg</a>
+  <a href="kontaktMeg.html">Kontakt meg</a>
 </div>
 
 <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Åpne meny</span>
