--- a/kontaktMeg.html
+++ b/kontaktMeg.html
@@ -69,8 +69,8 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Hjem</a>
   <a href="prosjekt.html">Prosjekter</a>
-  <a href="om meg.html">Om meg</a>
-  <a href="kontakt meg.html">Kontakt meg</a>
+  <a href="omMeg.html">Om meg</a>
+  <a href="kontaktMeg.html">Kontakt meg</a>
 </div>
 
 <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Åpne meny</span>
