--- a/prosjekt.html
+++ b/prosjekt.html
@@ -11,10 +11,16 @@
           background-size: 100% 100%;
         }
         </style>
+<style>
+  h1 {text-align: center;}
+  h2 {text-align: center;}
+  p {text-align: center;}
+  div {text-align: center;}
+</style>
         <body>    
 </head>
 
-<h1>Erlend</h1>
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -72,6 +78,7 @@ body {
   <a href="kontaktMeg.html">Kontakt meg</a>
 </div>
 
+
 <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Åpne meny</span>
 
 <script>
@@ -83,15 +90,21 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 </script>
+
+<h1>Erlend</h1>
+
 <h2>Prosjekter</h2>
 
-<img src="https://media.discordapp.net/attachments/380994930904137730/1016627690826125362/unknown.png?width=451&height=294" alt="Erlend">
 
+<div>
+  <img src="https://media.discordapp.net/attachments/380994930904137730/1016627690826125362/unknown.png?width=451&height=294" alt="Erlend">
+</div>
 <h2>Lorem ipsum dolor sit amet.</h2>
 <p>6. september 2022</p>
 
 <p>© 2022 Moseby</p>
 
+<div>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -125,6 +138,7 @@ function closeNav() {
 }
 
 
+
 </style>
 </head>
 <body>
@@ -134,5 +148,5 @@ function closeNav() {
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
 <a href="https://no.linkedin.com/" class="fa fa-linkedin"></a>
 
-
+</body>
 </html>
