--- a/kontaktMeg.html
+++ b/kontaktMeg.html
@@ -11,11 +11,17 @@
           background-size: 100% 100%;
         }
         </style>
-        <body>    
+        <body>
+<style>
+  h1 {text-align: center;}
+  h2 {text-align: center;}
+  p {text-align: center;}
+  div {text-align: center;}
+</style>
 </head>
 </html>
 
-<h1>Erlend</h1> 
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -86,10 +92,10 @@ function closeNav() {
 </script>
    
 
-
+<h1>Erlend</h1> 
 
 <h2>Kontakt meg</h2>
-
+<div>
 <form action="/action_page.php">
   <label for="navn">Navn:</label><br>
   <input type="text" id="navn" name="navn" placeholder="Navn"><br><br>
@@ -156,3 +162,4 @@ function closeNav() {
 <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
 <a href="https://no.linkedin.com/" class="fa fa-linkedin"></a>
+</div>
