--- a/omMeg.html
+++ b/omMeg.html
@@ -11,10 +11,16 @@
           background-size: 100% 100%;
         }
         </style>
-        <body>    
+<style>
+  h1 {text-align: center;}
+  h2 {text-align: center;}
+  p {text-align: center;}
+  div {text-align: center;}
+</style>
+<body>    
 </head>
 
-<h1>Erlend</h1>
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -83,15 +89,20 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 </script>
+
+<h1>Erlend</h1>
 <h2>Om meg</h2>
 
+<div>
 <img src="https://media.discordapp.net/attachments/380994930904137730/1015201259218800650/IMG_3639.jpg?width=246&height=394" alt="Erlend">
+</div>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum risus sit amet purus consequat vestibulum. Ut sagittis et metus sed sagittis. Aliquam condimentum elit vel nibh posuere, vel venenatis sem facilisis. Quisque nulla felis, commodo eu lectus eu, condimentum pulvinar massa. In sit amet laoreet lacus, quis finibus erat. Nulla facilisi. Nullam mollis turpis a ornare cursus. Ut facilisis augue vitae lorem vulputate faucibus. Nullam suscipit eros erat, et placerat dui rutrum id. Curabitur diam mauris, malesuada in dui eu, venenatis ornare purus.</p>
 
 
 <p>© 2022 Moseby</p>
 
+<div>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -126,13 +137,13 @@ function closeNav() {
 
 
 </style>
-</head>
-<body>
+
+
 
 
 <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
 <a href="https://twitter.com/" class="fa fa-twitter"></a>
 <a href="https://no.linkedin.com/" class="fa fa-linkedin"></a>
 
-
+</div>
 </html>
