--- a/html/recreatingNetflix/index.html
+++ b/html/recreatingNetflix/index.html
@@ -96,7 +96,7 @@
                         Create profiles for children.
                     </h2>
                     <p>
-                        Send childrne on adventures with their favorite characters in a space made just for them - free with your membership.
+                        Send children on adventures with their favorite characters in a space made just for them - free with your membership.
                     </p>
                 </div>
             </div>
