--- a/html/something/aboutme.html
+++ b/html/something/aboutme.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="aboutme.css">
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/380994930904137730/1070668767522213949/p.png">
     <title>Portfolio</title>
 </head>
 <body>
@@ -39,6 +40,8 @@
                 cupidatat non proident, sunt in culpa qui officia deserunt 
                 mollit anim id est laborum.
             </p>
+
+            <img src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_481292845_77896.jpg" alt="" class="image">
 
             <div class="footer">
                 <a href="https://linkedin.com">
