--- a/html/something/projects.html
+++ b/html/something/projects.html
@@ -4,25 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="something.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/380994930904137730/1070668767522213949/p.png">
     <title>Portfolio</title>
 </head>
 <body>
+
+    <div class="header">
+        <nav>
+            <button type="button" class="home" onclick="location.href='index.html'">
+                Home
+            </button>
+            <button type="button" class="home" onclick="location.href='aboutme.html'">
+                About Me
+            </button>
+            <button type="button" class="home" onclick="location.href='projects.html'">
+                Projects
+            </button>
+            <button type="button" class="home" onclick="location.href='contact.html'">
+                Contact Me
+            </button>
+        </nav>
+        <div>
+            <h1 class="aboutme_txt">
+                PROJECTS
+            </h1>
+            <p class="aboutme_innhold">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+                cupidatat non proident, sunt in culpa qui officia deserunt 
+                mollit anim id est laborum.
+            </p>
+            <img src="https://cdn3d.iconscout.com/3d/premium/thumb/project-task-management-4500578-3735587.png" alt="" class="image">
+
+            <div class="footer">
+                <a href="https://linkedin.com">
+                    <img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt="">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="https://play-lh.googleusercontent.com/wIf3HtczQDjHzHuu7vezhqNs0zXAG85F7VmP7nhsTxO3OHegrVXlqIh_DWBYi86FTIGk" alt="">
+                </a>
+                <a href="https://facebook.com">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Facebook_F_icon.svg/640px-Facebook_F_icon.svg.png" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+
     
-    <nav>
-        <button type="button" class="home" onclick="location.href='index.html'">
-            Home
-        </button>
-        <button type="button" class="home" onclick="location.href='aboutme.html'">
-            About Me
-        </button>
-        <button type="button" class="home" onclick="location.href='projects.html'">
-            Projects
-        </button>
-        <button type="button" class="home" onclick="location.href='contact.html'">
-            Contact Me
-        </button>
-    </nav>
 
 </body>
 </html>
