--- a/html/something/index.html
+++ b/html/something/index.html
@@ -59,18 +59,19 @@
                 cupidatat non proident, sunt in culpa qui officia deserunt 
                 mollit anim id est laborum.
             </p>
-            <div class="footer">
-                <a href="https://linkedin.com">
-                    <img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt="">
-                </a>
-                <a href="https://twitter.com">
-                    <img src="https://play-lh.googleusercontent.com/wIf3HtczQDjHzHuu7vezhqNs0zXAG85F7VmP7nhsTxO3OHegrVXlqIh_DWBYi86FTIGk" alt="">
-                </a>
-                <a href="https://facebook.com">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Facebook_F_icon.svg/640px-Facebook_F_icon.svg.png" alt="">
-                </a>
-            </div>
         </div>
+    </div>
+    <div class="footer">
+        <hr>
+        <a href="https://linkedin.com" style="text-decoration: none;">
+            <img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw">
+        </a>
+        <a href="https://twitter.com" style="text-decoration: none;">
+            <img src="https://play-lh.googleusercontent.com/wIf3HtczQDjHzHuu7vezhqNs0zXAG85F7VmP7nhsTxO3OHegrVXlqIh_DWBYi86FTIGk">
+        </a>
+        <a href="https://facebook.com" style="text-decoration: none;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Facebook_F_icon.svg/640px-Facebook_F_icon.svg.png">
+        </a>
     </div>
 
     
