--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class="header">
@@ -48,7 +51,13 @@
             <h1>Om meg</h1>
             <div class="aboutmetext">
                 <h3>Hei!</h3>
-                <p>Jeg er Erlend.</p>
+                <p>Jeg identifiserer meg som hvit nordmann. <br> Jeg identifiserer meg altså IKKE som en uhvit unordmann.</p>
+            </div>
+            <div class="picMe">
+                <img src="/images/meg.png" alt="Bilde av meg">
+            </div>
+            <div>
+                <a id="scroll-btn2" href="#om-meg"></a>
             </div>
         </section>
         <section id="section-3">
