--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -60,8 +60,22 @@
                 <a id="scroll-btn2" href="#om-meg"></a>
             </div>
         </section>
-        <section id="section-3">
 
-        </section>
+        <div class="prosjekter">
+            <div class="row">
+                <div class="text-col">
+                    <h2>
+                        Filler tekst.
+                    </h2>
+                    <p>
+                        Filler tekst filler tekst filler tekst filler tekst filler tekst filler tekst.
+                    </p>
+                </div>
+                <div class="img-col">
+                    <img src="/images/pc.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
