--- a/html/portfolio/prosjekter.html
+++ b/html/portfolio/prosjekter.html
@@ -5,9 +5,13 @@
     <title>
         Portefølje
     </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="prosjekter.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" 
+    rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
@@ -25,57 +29,59 @@
                 </div>
                 <ul>
                     <nav>
-                        <li><a href="#">Hjem</a></li>
+                        <li><a href="index.html">Hjem</a></li>
                         <li><a href="#">Ta kontakt</a></li>
                     </nav>
                 </ul>
             </div>
             <div class="title">
                 <h1>
-                    Min portefølje
+                    Mine prosjekter
                 </h1>
-                <p class="signature">Erlend Moseby</p>
             </div>
         </div>
 
-        <div class="om-meg">
-            <div class="row">
-                <div class="picMe">
-                    <img src="/images/meg.png" alt="">
-                </div>
-                <div class="aboutmetext">
-                    <h2>
-                        Om meg
-                    </h2>
-                    <p>
-                        IT student på Åssiden vgs <br> også videre også videre.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        
         <div class="prosjekter">
             <div class="row">
                 <div class="text-col">
                     <h2>
-                        Se mine prosjekter
+                        Prosjekt 1
                     </h2>
                     <p>
-                        Klikk her for å se prosjektene jeg har laget.
+                        lorem ipsum et eller annet blah blah <br> også videre også videre
                     </p>
-                    <button type="button" class="prosjbtn" onclick="location.href='prosjekter.html'">
-                        Prosjekter
-                    </button>
                 </div>
                 <div class="img-col">
-                    <img src="/images/pc.jpg" alt="">
-                </div>
-                <div>
-                    <a id="scroll-btn2" href="#"></a>
+                    <img src="images/placeholder.png" alt="">
                 </div>
             </div>
-        </div>
-    </div>
+
+            <div class="row">
+                <div class="img-col">
+                    <img src="images/placeholder.png" alt="">
+                </div>
+                <div class="text-col">
+                    <h2>
+                        Prosjekt 1
+                    </h2>
+                    <p>
+                        lorem ipsum et eller annet blah blah <br> også videre også videre
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="text-col">
+                    <h2>
+                        Prosjekt 1
+                    </h2>
+                    <p>
+                        lorem ipsum et eller annet blah blah <br> også videre også videre
+                    </p>
+                </div>
+                <div class="img-col">
+                    <img src="images/placeholder.png" alt="">
+                </div>
+            </div>
 </body>
 </html>
