--- a/html/portfolio/prosjekter.html
+++ b/html/portfolio/prosjekter.html
@@ -83,5 +83,6 @@
                     <img src="images/placeholder.png" alt="">
                 </div>
             </div>
-</body>
+        </div>
+    </body>
 </html>
