--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="om-meg">
-            <div class="row">
+            <div class="row1">
                 <div class="picMe">
                     <img src="/images/meg.png" alt="">
                 </div>
@@ -47,8 +47,12 @@
                     <h2>
                         Om meg
                     </h2>
-                    <p>
-                        IT student på Åssiden vgs <br> også videre også videre.
+
+                    <p><h3>Hei!</h3>
+                    </h3>Mitt navn er Erlend og jeg er en IT student på Åssiden vgs. Jeg er spesielt interessert i webdesign og front-end utvikling, og jeg elsker å skape vakre og funksjonelle nettsider med god brukeropplevelse i bakhodet. 
+                    <br><br>  
+                    Jeg ønsker å lære så mye som mulig om dette feltet i løpet av min tid på skolen, og å bygge opp en sterk portefølje av prosjekter som viser mine ferdigheter og kreativitet.
+                    <br><Skroll ned for å se prosjektene mine.
                     </p>
                 </div>
             </div>
@@ -56,7 +60,7 @@
 
         
         <div class="prosjekter">
-            <div class="row">
+            <div class="row2">
                 <div class="text-col">
                     <h2>
                         Se mine prosjekter
@@ -76,6 +80,5 @@
                 </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
