--- a/html/portfolio/prosjekter.html
+++ b/html/portfolio/prosjekter.html
@@ -45,14 +45,14 @@
             <div class="row">
                 <div class="text-col">
                     <h2>
-                        Prosjekt 1
+                        Tidligere nettside
                     </h2>
                     <p>
-                        lorem ipsum et eller annet blah blah <br> også videre også videre
+                        Her ser du "kontakt meg" siden til en <br> nettside  jeg lagde
                     </p>
                 </div>
                 <div class="img-col">
-                    <img src="images/placeholder.png" alt="">
+                    <img src="images/project1.png" alt="">
                 </div>
             </div>
 
