--- a/html/portfolio/prosjekter.html
+++ b/html/portfolio/prosjekter.html
@@ -65,7 +65,7 @@
                         Prosjekt 1
                     </h2>
                     <p>
-                        lorem ipsum et eller annet blah blah <br> også videre også videre
+                        Lorem ipsum et eller annet blah blah <br> også videre også videre
                     </p>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         Prosjekt 1
                     </h2>
                     <p>
-                        lorem ipsum et eller annet blah blah <br> også videre også videre
+                        Lorem ipsum et eller annet blah blah <br> også videre også videre
                     </p>
                 </div>
                 <div class="img-col">
